--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.85.9",
-		"framer-motion": "^12.23.12",
 		"js-cookie": "^3.0.5",
+		"motion": "^12.23.12",
 		"next": "15.5.2",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
+		"react-hot-toast": "^2.6.0",
 		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
