--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"dev": "next dev -p 3001",
 		"build": "next build",
 		"start": "next start -p 3001",
-		"lint": "eslint"
+		"lint": "eslint",
+		"test": "jest",
+		"test:watch": "jest --watch"
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.85.9",
@@ -21,6 +23,10 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
+		"@testing-library/jest-dom": "^6.8.0",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/jest": "^30.0.0",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
 		"@types/react": "^19",
@@ -29,6 +35,8 @@
 		"add": "^2.0.6",
 		"eslint": "^9",
 		"eslint-config-next": "15.5.2",
+		"jest": "^30.1.3",
+		"jest-environment-jsdom": "^30.1.2",
 		"jwt-decode": "^4.0.0",
 		"pnpm": "^10.15.1",
 		"tailwindcss": "^4",
