--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"test:watch": "jest --watch"
 	},
 	"dependencies": {
+		"@tanstack/query-async-storage-persister": "^5.87.1",
 		"@tanstack/react-query": "^5.85.9",
+		"@tanstack/react-query-persist-client": "^5.87.1",
 		"js-cookie": "^3.0.5",
 		"motion": "^12.23.12",
 		"next": "15.5.2",
